added h1 and form with 5 divs and set up initial h2 plus radio inputs for each

--- a/index.html
+++ b/index.html
@@ -8,6 +8,48 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Timed Code Quiz</title>
 </head>
+<h1>Coding Quiz</h1>
+<div class="questions-container">
+    <form>
+        <div class="question" data-state="hidden">
+            <h2>Question 1 Text</h2>
+            <input type="radio" value="answer choice 1">
+            <input type="radio" value="answer choice 2">
+            <input type="radio" value="answer choice 3">
+            <input type="radio" value="answer choice 4">
+        </div>
+        <div class="question" data-state="hidden">
+            <h2>Question 2 Text</h2>
+            <input type="radio" value="answer choice 1">
+            <input type="radio" value="answer choice 2">
+            <input type="radio" value="answer choice 3">
+            <input type="radio" value="answer choice 4">
+        </div>
+        <div class="question" data-state="hidden">
+            <h2>Question 3 Text</h2>
+            <input type="radio" value="answer choice 1">
+            <input type="radio" value="answer choice 2">
+            <input type="radio" value="answer choice 3">
+            <input type="radio" value="answer choice 4">
+        </div>
+        <div class="question" data-state="hidden">
+            <h2>Question 4 Text</h2>
+            <input type="radio" value="answer choice 1">
+            <input type="radio" value="answer choice 2">
+            <input type="radio" value="answer choice 3">
+            <input type="radio" value="answer choice 4">
+        </div>
+        <div class="question" data-state="hidden">
+            <h2>Question 5 Text</h2>
+            <input type="radio" value="answer choice 1">
+            <input type="radio" value="answer choice 2">
+            <input type="radio" value="answer choice 3">
+            <input type="radio" value="answer choice 4">
+        </div>
+
+
+    </form>
+</div>
 
 <body>
 
