added labels to all inputs

--- a/index.html
+++ b/index.html
@@ -13,38 +13,58 @@
     <form>
         <div class="question" data-state="hidden">
             <h2>Question 1 Text</h2>
-            <input type="radio" value="answer choice 1">
-            <input type="radio" value="answer choice 2">
-            <input type="radio" value="answer choice 3">
-            <input type="radio" value="answer choice 4">
+            <input type="radio" value="choice1">
+            <label for="choice1">Choice 1</label>
+            <input type="radio" value="choice2">
+            <label for="choice2">Choice 2</label>
+            <input type="radio" value="choice3">
+            <label for="choice3">Choice 3</label>
+            <input type="radio" value="choice4">
+            <label for="choice4">Choice 4</label>
         </div>
         <div class="question" data-state="hidden">
             <h2>Question 2 Text</h2>
-            <input type="radio" value="answer choice 1">
-            <input type="radio" value="answer choice 2">
-            <input type="radio" value="answer choice 3">
-            <input type="radio" value="answer choice 4">
+            <input type="radio" value="choice1">
+            <label for="choice1">Choice 1</label>
+            <input type="radio" value="choice2">
+            <label for="choice2">Choice 2</label>
+            <input type="radio" value="choice3">
+            <label for="choice3">Choice 3</label>
+            <input type="radio" value="choice4">
+            <label for="choice4">Choice 4</label>
         </div>
         <div class="question" data-state="hidden">
             <h2>Question 3 Text</h2>
-            <input type="radio" value="answer choice 1">
-            <input type="radio" value="answer choice 2">
-            <input type="radio" value="answer choice 3">
-            <input type="radio" value="answer choice 4">
+            <input type="radio" value="choice1">
+            <label for="choice1">Choice 1</label>
+            <input type="radio" value="choice2">
+            <label for="choice2">Choice 2</label>
+            <input type="radio" value="choice3">
+            <label for="choice3">Choice 3</label>
+            <input type="radio" value="choice4">
+            <label for="choice4">Choice 4</label>
         </div>
         <div class="question" data-state="hidden">
             <h2>Question 4 Text</h2>
-            <input type="radio" value="answer choice 1">
-            <input type="radio" value="answer choice 2">
-            <input type="radio" value="answer choice 3">
-            <input type="radio" value="answer choice 4">
+            <input type="radio" value="choice1">
+            <label for="choice1">Choice 1</label>
+            <input type="radio" value="choice2">
+            <label for="choice2">Choice 2</label>
+            <input type="radio" value="choice3">
+            <label for="choice3">Choice 3</label>
+            <input type="radio" value="choice4">
+            <label for="choice4">Choice 4</label>
         </div>
         <div class="question" data-state="hidden">
             <h2>Question 5 Text</h2>
-            <input type="radio" value="answer choice 1">
-            <input type="radio" value="answer choice 2">
-            <input type="radio" value="answer choice 3">
-            <input type="radio" value="answer choice 4">
+            <input type="radio" value="choice1">
+            <label for="choice1">Choice 1</label>
+            <input type="radio" value="choice2">
+            <label for="choice2">Choice 2</label>
+            <input type="radio" value="choice3">
+            <label for="choice3">Choice 3</label>
+            <input type="radio" value="choice4">
+            <label for="choice4">Choice 4</label>
         </div>
 
 
