--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <input type="radio" value="choice4">
             <label for="choice4">Choice 4</label>
         </div>
-
+        <button type="submit">Submit</button>
 
     </form>
 </div>
