--- a/index.html
+++ b/index.html
@@ -11,59 +11,59 @@
 <h1>Coding Quiz</h1>
 <div class="questions-container">
     <form>
-        <div class="question" data-state="hidden">
+        <div class="question" id="question1" data-state="hidden">
             <h2>Question 1 Text</h2>
-            <input type="radio" value="choice1">
+            <input type="radio" value="choice1" name="firstQ">
             <label for="choice1">Choice 1</label>
-            <input type="radio" value="choice2">
+            <input type="radio" value="choice2" name="firstQ">
             <label for="choice2">Choice 2</label>
-            <input type="radio" value="choice3">
+            <input type="radio" value="choice3" name="firstQ">
             <label for="choice3">Choice 3</label>
-            <input type="radio" value="choice4">
+            <input type="radio" value="choice4" name="firstQ">
             <label for="choice4">Choice 4</label>
         </div>
-        <div class="question" data-state="hidden">
+        <div class="question" id="question2" data-state="hidden">
             <h2>Question 2 Text</h2>
-            <input type="radio" value="choice1">
+            <input type="radio" value="choice1" name="secondQ">
             <label for="choice1">Choice 1</label>
-            <input type="radio" value="choice2">
+            <input type="radio" value="choice2" name="secondQ">
             <label for="choice2">Choice 2</label>
-            <input type="radio" value="choice3">
+            <input type="radio" value="choice3" name="secondQ">
             <label for="choice3">Choice 3</label>
-            <input type="radio" value="choice4">
+            <input type="radio" value="choice4" name="secondQ">
             <label for="choice4">Choice 4</label>
         </div>
-        <div class="question" data-state="hidden">
+        <div class="question" id="question3" data-state="hidden">
             <h2>Question 3 Text</h2>
-            <input type="radio" value="choice1">
+            <input type="radio" value="choice1" name="thirdQ">
             <label for="choice1">Choice 1</label>
-            <input type="radio" value="choice2">
+            <input type="radio" value="choice2" name="thirdQ">
             <label for="choice2">Choice 2</label>
-            <input type="radio" value="choice3">
+            <input type="radio" value="choice3" name="thirdQ">
             <label for="choice3">Choice 3</label>
-            <input type="radio" value="choice4">
+            <input type="radio" value="choice4" name="thirdQ">
             <label for="choice4">Choice 4</label>
         </div>
-        <div class="question" data-state="hidden">
+        <div class="question" id="question4" data-state="hidden">
             <h2>Question 4 Text</h2>
-            <input type="radio" value="choice1">
+            <input type="radio" value="choice1" name="fourthQ">
             <label for="choice1">Choice 1</label>
-            <input type="radio" value="choice2">
+            <input type="radio" value="choice2" name="fourthQ">
             <label for="choice2">Choice 2</label>
-            <input type="radio" value="choice3">
+            <input type="radio" value="choice3" name="fourthQ">
             <label for="choice3">Choice 3</label>
-            <input type="radio" value="choice4">
+            <input type="radio" value="choice4" name="fourthQ">
             <label for="choice4">Choice 4</label>
         </div>
-        <div class="question" data-state="hidden">
+        <div class="question" id="question5" data-state="hidden">
             <h2>Question 5 Text</h2>
-            <input type="radio" value="choice1">
+            <input type="radio" value="choice1" name="fifthQ">
             <label for="choice1">Choice 1</label>
-            <input type="radio" value="choice2">
+            <input type="radio" value="choice2" name="fifthQ">
             <label for="choice2">Choice 2</label>
-            <input type="radio" value="choice3">
+            <input type="radio" value="choice3" name="fifthQ">
             <label for="choice3">Choice 3</label>
-            <input type="radio" value="choice4">
+            <input type="radio" value="choice4" name="fifthQ">
             <label for="choice4">Choice 4</label>
         </div>
         <button type="submit">Submit</button>
