--- a/index.html
+++ b/index.html
@@ -13,58 +13,58 @@
     <form>
         <div class="question" id="question1" data-state="hidden">
             <h2>Question 1 Text</h2>
-            <input type="radio" value="choice1" name="firstQ">
-            <label for="choice1">Choice 1</label>
-            <input type="radio" value="choice2" name="firstQ">
-            <label for="choice2">Choice 2</label>
-            <input type="radio" value="choice3" name="firstQ">
-            <label for="choice3">Choice 3</label>
-            <input type="radio" value="choice4" name="firstQ">
-            <label for="choice4">Choice 4</label>
+            <input type="radio" id="q1C1" value="choice1" name="firstQ">
+            <label for="q1C1">Choice 1</label>
+            <input type="radio" id="q1C2" value="choice2" name="firstQ">
+            <label for="q1C2">Choice 2</label>
+            <input type="radio" id="q1C3" value="choice3" name="firstQ">
+            <label for="q1C3">Choice 3</label>
+            <input type="radio" id="q1C4" value="choice4" name="firstQ">
+            <label for="q1C4">Choice 4</label>
         </div>
         <div class="question" id="question2" data-state="hidden">
             <h2>Question 2 Text</h2>
-            <input type="radio" value="choice1" name="secondQ">
-            <label for="choice1">Choice 1</label>
-            <input type="radio" value="choice2" name="secondQ">
-            <label for="choice2">Choice 2</label>
-            <input type="radio" value="choice3" name="secondQ">
-            <label for="choice3">Choice 3</label>
-            <input type="radio" value="choice4" name="secondQ">
-            <label for="choice4">Choice 4</label>
+            <input type="radio" id="q2C1" value="choice1" name="secondQ">
+            <label for="q2C1">Choice 1</label>
+            <input type="radio" id="q2C2" value="choice2" name="secondQ">
+            <label for="q2C2">Choice 2</label>
+            <input type="radio" id="q2C3" value="choice3" name="secondQ">
+            <label for="q2C3">Choice 3</label>
+            <input type="radio" id="q2C4" value="choice4" name="secondQ">
+            <label for="q2C4">Choice 4</label>
         </div>
         <div class="question" id="question3" data-state="hidden">
             <h2>Question 3 Text</h2>
-            <input type="radio" value="choice1" name="thirdQ">
-            <label for="choice1">Choice 1</label>
-            <input type="radio" value="choice2" name="thirdQ">
-            <label for="choice2">Choice 2</label>
-            <input type="radio" value="choice3" name="thirdQ">
-            <label for="choice3">Choice 3</label>
-            <input type="radio" value="choice4" name="thirdQ">
-            <label for="choice4">Choice 4</label>
+            <input type="radio" id="q3C1" value="choice1" name="thirdQ">
+            <label for=q3C1">Choice 1</label>
+            <input type="radio" id="q3C2" value="choice2" name="thirdQ">
+            <label for="q3C2">Choice 2</label>
+            <input type="radio" id="q3C3" value="choice3" name="thirdQ">
+            <label for="q3C3">Choice 3</label>
+            <input type="radio" id="q3C4" value="choice4" name="thirdQ">
+            <label for="q3C4">Choice 4</label>
         </div>
         <div class="question" id="question4" data-state="hidden">
             <h2>Question 4 Text</h2>
-            <input type="radio" value="choice1" name="fourthQ">
-            <label for="choice1">Choice 1</label>
-            <input type="radio" value="choice2" name="fourthQ">
-            <label for="choice2">Choice 2</label>
-            <input type="radio" value="choice3" name="fourthQ">
-            <label for="choice3">Choice 3</label>
-            <input type="radio" value="choice4" name="fourthQ">
-            <label for="choice4">Choice 4</label>
+            <input type="radio" id="q4C1" value="choice1" name="fourthQ">
+            <label for="q4C1">Choice 1</label>
+            <input type="radio" id="q4C2" value="choice2" name="fourthQ">
+            <label for="q4C2">Choice 2</label>
+            <input type="radio" id="q4C3" value="choice3" name="fourthQ">
+            <label for="q4C3">Choice 3</label>
+            <input type="radio" id="q4C4" value="choice4" name="fourthQ">
+            <label for="q4C4">Choice 4</label>
         </div>
         <div class="question" id="question5" data-state="hidden">
             <h2>Question 5 Text</h2>
-            <input type="radio" value="choice1" name="fifthQ">
-            <label for="choice1">Choice 1</label>
-            <input type="radio" value="choice2" name="fifthQ">
-            <label for="choice2">Choice 2</label>
-            <input type="radio" value="choice3" name="fifthQ">
-            <label for="choice3">Choice 3</label>
-            <input type="radio" value="choice4" name="fifthQ">
-            <label for="choice4">Choice 4</label>
+            <input type="radio" id="q5C1" value="choice1" name="fifthQ">
+            <label for="q5C1">Choice 1</label>
+            <input type="radio" id="q5C2" value="choice2" name="fifthQ">
+            <label for="q5C2">Choice 2</label>
+            <input type="radio" id="q5C3" value="choice3" name="fifthQ">
+            <label for="q5C3">Choice 3</label>
+            <input type="radio" id="q5C4" value="choice4" name="fifthQ">
+            <label for="q5C4">Choice 4</label>
         </div>
         <button type="submit">Submit</button>
 
