--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
     <title>Timed Code Quiz</title>
 </head>
 <h1>Coding Quiz</h1>
-<div class="questions-container">
+<div class="container">
+    <section class="box">
+        <h2>Welcome message and instructions</h2>
+        <button class="advance">Begin</button>
+    </section>
     <form id="quizForm" name="codeQuiz">
-        <div class="question" id="question1" data-state="hidden">
+        <section class="box" id="question1" data-state="hidden">
             <h2>Question 1 Text</h2>
             <input type="radio" class="choice" id="q1C1" value="a" name="firstQ">
             <label for="q1C1">Choice 1</label>
@@ -21,8 +25,9 @@
             <label for="q1C3">Choice 3</label>
             <input type="radio" class="choice" id="q1C4" value="d" name="firstQ">
             <label for="q1C4">Choice 4</label>
-        </div>
-        <div class="question" id="question2" data-state="hidden">
+            <button class="advance">Next Question</button>
+        </section>
+        <section class="box" id="question2" data-state="hidden">
             <h2>Question 2 Text</h2>
             <input type="radio" class="choice" id="q2C1" value="a" name="secondQ">
             <label for="q2C1">Choice 1</label>
@@ -32,8 +37,9 @@
             <label for="q2C3">Choice 3</label>
             <input type="radio" class="choice" id="q2C4" value="d" name="secondQ">
             <label for="q2C4">Choice 4</label>
-        </div>
-        <div class="question" id="question3" data-state="hidden">
+            <button class="advance">Next Question</button>
+        </section>
+        <section class="box" id="question3" data-state="hidden">
             <h2>Question 3 Text</h2>
             <input type="radio" class="choice" id="q3C1" value="a" name="thirdQ">
             <label for=q3C1">Choice 1</label>
@@ -43,8 +49,9 @@
             <label for="q3C3">Choice 3</label>
             <input type="radio" class="choice" id="q3C4" value="d" name="thirdQ">
             <label for="q3C4">Choice 4</label>
-        </div>
-        <div class="question" id="question4" data-state="hidden">
+            <button class="advance">Next Question</button>
+        </section>
+        <section class="box" id="question4" data-state="hidden">
             <h2>Question 4 Text</h2>
             <input type="radio" class="choice" id="q4C1" value="a" name="fourthQ">
             <label for="q4C1">Choice 1</label>
@@ -54,8 +61,9 @@
             <label for="q4C3">Choice 3</label>
             <input type="radio" class="choice" id="q4C4" value="d" name="fourthQ">
             <label for="q4C4">Choice 4</label>
-        </div>
-        <div class="question" id="question5" data-state="hidden">
+            <button class="advance">Next Question</button>
+        </section>
+        <section class="box" id="question5" data-state="hidden">
             <h2>Question 5 Text</h2>
             <input type="radio" class="choice" id="q5C1" value="a" name="fifthQ">
             <label for="q5C1">Choice 1</label>
@@ -65,8 +73,8 @@
             <label for="q5C3">Choice 3</label>
             <input type="radio" class="choice" id="q5C4" value="d" name="fifthQ">
             <label for="q5C4">Choice 4</label>
-        </div>
-        <button type="submit">Submit</button>
+            <button type="submit">Submit</button>
+        </section>
 
     </form>
 </div>
