gave each section a data index to be iterated over instead of using data-state hidden method

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 <h1>Coding Quiz</h1>
 <div class="container">
-    <section class="box">
+    <section class="box" id="welcome" data-index="1">
         <h2>Welcome message and instructions</h2>
         <button class="advance">Begin</button>
     </section>
     <form id="quizForm" name="codeQuiz">
-        <section class="box" id="question1" data-state="hidden">
+        <section class="box" id="question1" data-index="2">
             <h2>Question 1 Text</h2>
             <input type="radio" class="choice" id="q1C1" value="a" name="firstQ">
             <label for="q1C1">Choice 1</label>
@@ -27,7 +27,7 @@
             <label for="q1C4">Choice 4</label>
             <button class="advance">Next Question</button>
         </section>
-        <section class="box" id="question2" data-state="hidden">
+        <section class="box" id="question2" data-index="3">
             <h2>Question 2 Text</h2>
             <input type="radio" class="choice" id="q2C1" value="a" name="secondQ">
             <label for="q2C1">Choice 1</label>
@@ -39,7 +39,7 @@
             <label for="q2C4">Choice 4</label>
             <button class="advance">Next Question</button>
         </section>
-        <section class="box" id="question3" data-state="hidden">
+        <section class="box" id="question3" data-index="4">
             <h2>Question 3 Text</h2>
             <input type="radio" class="choice" id="q3C1" value="a" name="thirdQ">
             <label for=q3C1">Choice 1</label>
@@ -51,7 +51,7 @@
             <label for="q3C4">Choice 4</label>
             <button class="advance">Next Question</button>
         </section>
-        <section class="box" id="question4" data-state="hidden">
+        <section class="box" id="question4" data-index="5">
             <h2>Question 4 Text</h2>
             <input type="radio" class="choice" id="q4C1" value="a" name="fourthQ">
             <label for="q4C1">Choice 1</label>
@@ -63,7 +63,7 @@
             <label for="q4C4">Choice 4</label>
             <button class="advance">Next Question</button>
         </section>
-        <section class="box" id="question5" data-state="hidden">
+        <section class="box" id="question5" data-index="6">
             <h2>Question 5 Text</h2>
             <input type="radio" class="choice" id="q5C1" value="a" name="fifthQ">
             <label for="q5C1">Choice 1</label>
