added ids back to radios to match labels, set up submit fuction to check for correct answers

--- a/index.html
+++ b/index.html
@@ -16,57 +16,57 @@
     <form id="quizForm" name="codeQuiz">
         <section class="box" id="question1" data-index="1">
             <h2>Question 1 Text</h2>
-            <input type="radio" class="choice" data-choice="a" value="a" name="firstQ">
+            <input type="radio" class="choice" id="q1C1" data-choice="a" value="a" name="firstQ" required>
             <label for="q1C1">Choice 1</label>
-            <input type="radio" class="choice" data-choice="b" value="b" name="firstQ">
+            <input type="radio" class="choice" id="q1C2" data-choice="b" value="b" name="firstQ">
             <label for="q1C2">Choice 2</label>
-            <input type="radio" class="choice" data-choice="c" value="c" name="firstQ">
+            <input type="radio" class="choice" id="q1C3" data-choice="c" value="c" name="firstQ">
             <label for="q1C3">Choice 3</label>
-            <input type="radio" class="choice" data-choice="d" value="d" name="firstQ">
+            <input type="radio" class="choice" id="q1C4" data-choice="d" value="d" name="firstQ">
             <label for="q1C4">Choice 4</label>
         </section>
         <section class="box" id="question2" data-index="2">
             <h2>Question 2 Text</h2>
-            <input type="radio" class="choice" data-choice="a" value="a" name="secondQ">
+            <input type="radio" class="choice" id="q2C1" data-choice="a" value="a" name="secondQ" required>
             <label for="q2C1">Choice 1</label>
-            <input type="radio" class="choice" data-choice="b" value="b" name="secondQ">
+            <input type="radio" class="choice" id="q2C2" data-choice="b" value="b" name="secondQ">
             <label for="q2C2">Choice 2</label>
-            <input type="radio" class="choice" data-choice="c" value="c" name="secondQ">
+            <input type="radio" class="choice" id="q2C3" data-choice="c" value="c" name="secondQ">
             <label for="q2C3">Choice 3</label>
-            <input type="radio" class="choice" data-choice="d" value="d" name="secondQ">
+            <input type="radio" class="choice" id="q2C4" data-choice="d" value="d" name="secondQ">
             <label for="q2C4">Choice 4</label>
         </section>
         <section class="box" id="question3" data-index="3">
             <h2>Question 3 Text</h2>
-            <input type="radio" class="choice" data-choice="a" value="a" name="thirdQ">
+            <input type="radio" class="choice" id="q3C1" data-choice="a" value="a" name="thirdQ" required>
             <label for=q3C1">Choice 1</label>
-            <input type="radio" class="choice" data-choice="b" value="b" name="thirdQ">
+            <input type="radio" class="choice" id="q3C2" data-choice="b" value="b" name="thirdQ">
             <label for="q3C2">Choice 2</label>
-            <input type="radio" class="choice" data-choice="c" value="c" name="thirdQ">
+            <input type="radio" class="choice" id="q3C3" data-choice="c" value="c" name="thirdQ">
             <label for="q3C3">Choice 3</label>
-            <input type="radio" class="choice" data-choice="d" value="d" name="thirdQ">
+            <input type="radio" class="choice" id="q3C4" data-choice="d" value="d" name="thirdQ">
             <label for="q3C4">Choice 4</label>
         </section>
         <section class="box" id="question4" data-index="4">
             <h2>Question 4 Text</h2>
-            <input type="radio" class="choice" data-choice="a" value="a" name="fourthQ">
+            <input type="radio" class="choice" id="q4C1" data-choice="a" value="a" name="fourthQ" required>
             <label for="q4C1">Choice 1</label>
-            <input type="radio" class="choice" data-choice="b" value="b" name="fourthQ">
+            <input type="radio" class="choice" id="q4C2" data-choice="b" value="b" name="fourthQ">
             <label for="q4C2">Choice 2</label>
-            <input type="radio" class="choice" data-choice="c" value="c" name="fourthQ">
+            <input type="radio" class="choice" id="q4C3" data-choice="c" value="c" name="fourthQ">
             <label for="q4C3">Choice 3</label>
-            <input type="radio" class="choice" data-choice="d" value="d" name="fourthQ">
+            <input type="radio" class="choice" id="q4C4" data-choice="d" value="d" name="fourthQ">
             <label for="q4C4">Choice 4</label>
         </section>
         <section class="box" id="question5" data-index="5">
             <h2>Question 5 Text</h2>
-            <input type="radio" class="choice" data-choice="a" value="a" name="fifthQ">
+            <input type="radio" class="choice" id="q5C1" data-choice="a" value="a" name="fifthQ" required>
             <label for="q5C1">Choice 1</label>
-            <input type="radio" class="choice" data-choice="b" value="b" name="fifthQ">
+            <input type="radio" class="choice" id="q5C2" data-choice="b" value="b" name="fifthQ">
             <label for="q5C2">Choice 2</label>
-            <input type="radio" class="choice" data-choice="c" value="c" name="fifthQ">
+            <input type="radio" class="choice" id="q5C3" data-choice="c" value="c" name="fifthQ">
             <label for="q5C3">Choice 3</label>
-            <input type="radio" class="choice" data-choice="d" value="d" name="fifthQ">
+            <input type="radio" class="choice" id="q5C4" data-choice="d" value="d" name="fifthQ">
             <label for="q5C4">Choice 4</label>
             <button type="submit">Submit</button>
         </section>
