added local storage for score and username - needs work

--- a/index.html
+++ b/index.html
@@ -70,9 +70,20 @@
             <label for="q5C4">Choice 4</label>
             <button type="submit">Submit</button>
         </section>
-
     </form>
-    <button class="advance">Begin</button>
+    <section class="box" id="complete" data-index="6">
+        <h3>You completed the code quiz!</h3>
+        <p></p>
+        <h3>Please type in your initials to save your score:</h3>
+        <input id="userNameInput" type="text">
+        <button id="save">Save</button>
+    </section>
+    <section class="box" data-index="7">
+        <h4>High Scores:</h4>
+        <article></article>
+
+    </section>
+    <button class="advance">Continue</button>
 </div>
 
 <body>
