added simple css link to html

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="https://cdn.simplecss.org/simple.css">
     <title>Timed Code Quiz</title>
 </head>
-<h1>Coding Quiz</h1>
+<h1></h1>
 <div class="container">
     <section class="box" id="welcome" data-index="0">
         <h2>Welcome message and instructions</h2>
