created functions for setTime and displayTime, incorporated time into score, made advance button hidden after Q4

--- a/index.html
+++ b/index.html
@@ -74,15 +74,16 @@
     <section class="box" id="complete" data-index="6">
         <h3>You completed the code quiz!</h3>
         <p></p>
-        <h3>Please type in your initials to save your score:</h3>
-        <input id="userNameInput" type="text">
+        <h3></h3>
+        <input id="userNameInput" name="save" type="text">
+        <label for="save">Add your initials and save your score</label>
         <button id="save">Save</button>
     </section>
-    <section class="box" data-index="7">
+    <!-- <section class="box" data-index="7">
         <h4>High Scores:</h4>
         <article></article>
 
-    </section>
+    </section> -->
     <button class="advance">Continue</button>
 </div>
 
