using parsed object for local storage to save all prev scores

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <div class="container">
     <section class="box" id="welcome" data-index="0">
         <h2>Coding Quiz Challenge!</h2>
-        <p>Correct answers, as well as the time it takes to answer the questions will effect your final score</p>
+        <article>Correct answers, as well as the time it takes to answer the questions will effect your final score
+        </article>
 
     </section>
     <form id="quizForm" name="codeQuiz">
@@ -75,17 +76,12 @@
     </form>
     <section class="box" id="complete" data-index="6">
         <h3>You completed the code quiz!</h3>
-        <p id="endMessage"></p>
-        <h3></h3>
-        <input id="userNameInput" name="save" type="text">
-        <label for="save">Add your initials and save your score</label>
+        <p></p>
+        <ul></ul>
+        <input id="userNameInput" name="saveInput" type="text">
+        <label for="saveInput">Add your initials and save your score</label>
         <button id="save">Save</button>
     </section>
-    <!-- <section class="box" data-index="7">
-        <h4>High Scores:</h4>
-        <article></article>
-
-    </section> -->
     <button class="advance">Continue</button>
 </div>
 
