added play again button + logic to restart the game

--- a/index.html
+++ b/index.html
@@ -78,9 +78,11 @@
         <h3>You completed the code quiz!</h3>
         <p></p>
         <ul></ul>
-        <input id="userNameInput" name="saveInput" type="text">
-        <label for="saveInput">Add your initials and save your score</label>
-        <button id="save">Save</button>
+        <div id="endGame">
+            <input id="userNameInput" name="saveInput" type="text">
+            <label for="saveInput" id="userNameLabel">Add your initials and save your score</label>
+            <button id="save">Save</button>
+        </div>
     </section>
     <button class="advance">Continue</button>
 </div>
