added some css + linked style sheet

--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Timed Code Quiz</title>
 </head>
 <h1></h1>
 <div class="container">
     <section class="box" id="welcome" data-index="0">
         <h2>Coding Quiz Challenge!</h2>
-        <article>Correct answers, as well as the time it takes to answer the questions will effect your final score
+        <article id="firstMessage">Correct answers, as well as the time it takes to answer the questions will effect
+            your final score
         </article>
 
     </section>
@@ -71,6 +73,8 @@
             <label for="q5C3">Flexbox</label>
             <input type="radio" class="choice" id="q5C4" data-choice="d" value="d" name="fifthQ">
             <label for="q5C4">Wireframe</label>
+            <br>
+            <br>
             <button type="submit">Submit</button>
         </section>
     </form>
