--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Timed Code Quiz</title>
@@ -16,6 +18,7 @@
         <article id="firstMessage">Correct answers, as well as the time it takes to answer the questions will effect
             your final score
         </article>
+        <button class="advance">Continue</button>
 
     </section>
     <form id="quizForm" name="codeQuiz">
@@ -29,6 +32,7 @@
             <label for="q1C3">reverse()</label>
             <input type="radio" class="choice" id="q1C4" data-choice="d" value="d" name="firstQ">
             <label for="q1C4">push()</label>
+            <p id="q1ResultEl"></p>
         </section>
         <section class="box" id="question2" data-index="2">
             <h2>Which of the following should only be used once in an HTML document?</h2>
@@ -75,20 +79,19 @@
             <label for="q5C4">Wireframe</label>
             <br>
             <br>
-            <button type="submit">Submit</button>
+        </section>
+        <section class="box" id="complete" data-index="6">
+            <h3>You completed the code quiz!</h3>
+            <button type="submit" id="submitButton">Calculate Score</button>
+            <p id="completeEl"></p>
+            <ul id="highScores"></ul>
+            <div id="endGame">
+                <input id="userNameInput" name="saveInput" type="text">
+                <label for="saveInput" id="userNameLabel">Add your initials and save your score</label>
+                <button id="save">Save</button>
+            </div>
         </section>
     </form>
-    <section class="box" id="complete" data-index="6">
-        <h3>You completed the code quiz!</h3>
-        <p></p>
-        <ul></ul>
-        <div id="endGame">
-            <input id="userNameInput" name="saveInput" type="text">
-            <label for="saveInput" id="userNameLabel">Add your initials and save your score</label>
-            <button id="save">Save</button>
-        </div>
-    </section>
-    <button class="advance">Continue</button>
 </div>
 
 <body>
